--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -197,6 +197,15 @@
   }
 }
 
+/* standalone */
+@media all and (display-mode: fullscreen) {
+  .search-container {
+    .search-header {
+      padding-top: calc(constant(safe-area-inset-top) + 32px);
+    }
+  }
+}
+
 /* iPad */
 .search-ipad-only {
   @media screen and (orientation: landscape) {
