feat: standalone styles

--- a/src/styles/basic/color.less
+++ b/src/styles/basic/color.less
@@ -10,3 +10,11 @@
 /* Background */
 @color-background-primary: @color-accent;
 @color-background-dark: #161616;
+
+:root {
+  --background-primary: @color-accent;
+}
+
+.dark {
+  --background-primary: #161616;
+}
