--- a/src/styles/history/history.less
+++ b/src/styles/history/history.less
@@ -94,15 +94,6 @@
   }
 }
 
-/* standalone */
-@media all and (display-mode: fullscreen) {
-  .history {
-    &-header {
-      padding-top: calc(constant(safe-area-inset-top) + 32px);
-    }
-  }
-}
-
 // mobile
 
 @media (max-width: 1280px) {
@@ -119,6 +110,13 @@
 }
 
 @media (max-width: 767px) {
+  @media (display-mode: standalone) {
+    .history {
+      &-header {
+        padding-top: calc(constant(safe-area-inset-top) + 32px);
+      }
+    }
+  }
   .history {
     &-header {
       width: auto !important;
