--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -347,19 +347,6 @@
   }
 }
 
-/* standalone */
-@media all and (display-mode: fullscreen) {
-  .pic-presentation-image-wrapper {
-    .pic-presentation-image {
-      padding-top: calc(constant(safe-area-inset-top) + 8px);
-      img {
-        border-radius: 16px;
-        box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.25);
-      }
-    }
-  }
-}
-
 /* iPad / iPad Pro protrait */
 @media (orientation: portrait) and (max-width: 1024px) {
   .pic-presentation-image-wrapper {
@@ -389,6 +376,18 @@
 
 /* Mobile */
 @media screen and (max-width: 767px) {
+  // standalone
+  @media (display-mode: standalone) {
+    .pic-presentation-image-wrapper {
+      .pic-presentation-image {
+        padding-top: calc(constant(safe-area-inset-top) + 8px);
+        img {
+          border-radius: 16px;
+          box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.25);
+        }
+      }
+    }
+  }
   .pic-presentation-image-wrapper {
     width: calc(100vw - 48px) !important;
     .pic-presentation-image {
