--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -120,7 +120,7 @@
 @media (max-width: 767px) {
   @media (display-mode: standalone) {
     .landing-container {
-      padding-top: calc(constant(safe-area-inset-top) + 20px);
+      padding-top: calc(env(safe-area-inset-top) + 20px);
     }
   }
   .landing-container {
