--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -380,7 +380,7 @@
   @media (display-mode: standalone) {
     .pic-presentation-image-wrapper {
       .pic-presentation-image {
-        padding-top: calc(constant(safe-area-inset-top) + 8px);
+        padding-top: calc(env(safe-area-inset-top) + 8px);
         img {
           border-radius: 16px;
           box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.25);
