--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -257,7 +257,7 @@
   @media (display-mode: standalone) {
     .rank-container {
       .rank-header {
-        padding-top: calc(constant(safe-area-inset-top) + 32px);
+        padding-top: calc(env(safe-area-inset-top) + 32px);
       }
     }
   }
