feat: complete sponsor page layout

--- a/src/styles/artist/artist.less
+++ b/src/styles/artist/artist.less
@@ -5,6 +5,7 @@
     .el-loading-spinner {
       transform: translateY(-50%);
     }
+    user-select: none;
   }
   .infinite-loading-container {
     .infinite-status-prompt {
