--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -8,6 +8,7 @@
   & > .el-loading-mask {
     max-height: 100vh;
     background-color: #fff !important;
+    user-select: none;
     .el-loading-spinner {
       transform: translateY(-47.5%);
     }
