--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -21,6 +21,7 @@
       .el-loading-spinner {
         transform: translateY(-20%);
       }
+      user-select: none;
     }
     &-error {
       position: absolute;
@@ -57,6 +58,7 @@
     }
     .el-loading-mask {
       opacity: 0.75;
+      user-select: none;
     }
   }
   .pic-presentation-page {
