--- a/src/styles/sponsor/sponsor.less
+++ b/src/styles/sponsor/sponsor.less
@@ -297,7 +297,7 @@
       font-family: Microsoft Yahei, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
         Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-size: 14px;
-      color: fade(@color-text-primary, 95%);
+      color: fade(@color-text-primary, 95%) !important;
       line-height: 40px;
       letter-spacing: 0.025rem;
     }
