feat: upgrade styles

--- a/src/styles/artist/detail.less
+++ b/src/styles/artist/detail.less
@@ -54,6 +54,8 @@
         color: @color-text-primary;
         font-weight: 600;
         margin-top: 24px;
+        font-family: 'Kosugi Maru', -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI',
+          sans-serif;
       }
       &-data {
         display: flex;
@@ -144,6 +146,8 @@
       margin: 16px 0;
       padding-right: 8px;
       white-space: pre-wrap;
+      font-family: 'Kosugi Maru', -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI',
+        sans-serif;
     }
     pre::-webkit-scrollbar {
       width: 5px;
