--- a/src/styles/pic/author.less
+++ b/src/styles/pic/author.less
@@ -24,6 +24,8 @@
       box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.125);
     }
     a {
+      font-family: 'Kosugi Maru', -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI',
+        sans-serif;
       margin-left: 16px;
       font-size: 20px;
       transition: 150ms all ease-in-out;
