--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -119,6 +119,8 @@
       font-size: 26px;
       font-weight: 600;
       color: @color-text-primary;
+      font-family: 'Kosugi Maru', -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI',
+        sans-serif;
       span {
         flex: 1;
       }
@@ -171,6 +173,9 @@
           padding: 0 6px;
           line-height: 28px;
           border-radius: 3px;
+          font-family: 'Kosugi Maru', -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI',
+            sans-serif;
+          letter-spacing: 0.025rem;
           .no-select();
         }
         a:visited {
