--- a/src/styles/common/infinite.less
+++ b/src/styles/common/infinite.less
@@ -8,7 +8,7 @@
 .infinite-failed {
   width: 100%;
   text-align: center;
-  margin-top: 1.5rem;
+  margin: 1.5rem 0 1rem 0;
   color: @color-text-primary;
   font-weight: 600;
   user-select: none;
