--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -92,6 +92,8 @@
       border-radius: 24px;
       transition: 200ms ease-in-out;
       letter-spacing: 0.05em;
+      font-family: 'Kosugi Maru', -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI',
+        sans-serif;
       .no-select();
     }
     &-item:hover {
