--- a/src/styles/pic/download.less
+++ b/src/styles/pic/download.less
@@ -64,6 +64,8 @@
     .el-button {
       flex: 1;
       border: none;
+      border-radius: 6px !important;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
     .el-button:hover {
       filter: brightness(1.125);
