fix: sponsor-text will be blocked by adblock

--- a/src/styles/sponsor/sponsor.less
+++ b/src/styles/sponsor/sponsor.less
@@ -192,7 +192,7 @@
           background-repeat: no-repeat;
           background-position: center;
         }
-        .sponsor-text {
+        .sponsor-item-text {
           flex: 1;
           margin-left: 10px;
         }
