feat: optimize icon and link styles

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -72,6 +72,12 @@ button:focus {
   font-size: 15px !important;
 }
 
+.icon {
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
 .vue-share-popup {
   border-radius: 10px;
   &__item:first-child {
