feat: update styles

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -1,11 +1,12 @@
 html {
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
   scroll-behavior: smooth;
   background: @color-background-primary;
