feat: update fonts

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -11,8 +11,8 @@ body {
   scroll-behavior: smooth;
   background: @color-background-primary;
   transition: background-color 200ms ease-in-out;
-  font-family: -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI', 'Heiti SC', 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Noto Sans SC, -apple-system-font, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @scrollbar-width: 8px;
