--- a/src/styles/sponsor/sponsor.less
+++ b/src/styles/sponsor/sponsor.less
@@ -294,8 +294,9 @@
 .dialog-sponsor-desc {
   .el-dialog__body {
     pre {
-      font-family: Microsoft Yahei, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: --apple-system-font, 'Noto Sans SC', Microsoft Yahei, -apple-system,
+        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
       font-size: 14px;
       color: fade(@color-text-primary, 95%) !important;
       line-height: 40px;
