fix: use apple system font first

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -11,7 +11,7 @@ body {
   scroll-behavior: smooth;
   background: @color-background-primary;
   transition: background-color 200ms ease-in-out;
-  font-family: Noto Sans SC, -apple-system-font, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI', Roboto,
+  font-family: -apple-system-font, Noto Sans SC, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
