fix: standalone styles

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -159,3 +159,5 @@ button:focus {
 @import './drawer.less';
 @import './messagebox.less';
 @import './dropdown.less';
+@import './popover.less';
+@import './message.less';
