--- a/src/styles/common/notice.less
+++ b/src/styles/common/notice.less
@@ -20,3 +20,9 @@
     }
   }
 }
+
+@media (display-mode: standalone) {
+  .oneline-notice-container {
+    margin-top: calc(env(safe-area-inset-top) + 12px);
+  }
+}
