--- a/src/styles/pic/overlay.less
+++ b/src/styles/pic/overlay.less
@@ -12,6 +12,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  .el-button {
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.05);
+    font-family: -apple-system-font, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
   &-wrapper {
     margin-bottom: 5.5rem;
     span,
@@ -31,6 +36,8 @@
       letter-spacing: 0.1rem;
       margin: 0 auto 2.75rem auto;
       text-align: center;
+      font-family: -apple-system-font, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     .pic-overlay-back {
       text-align: center;
