feat: update login dialog styles

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -151,6 +151,7 @@ button:focus {
   }
 }
 
+@import './button.less';
 @import './form.less';
 @import './notification.less';
 @import './dialog.less';
