--- a/src/styles/basic/message.less
+++ b/src/styles/basic/message.less
@@ -1,3 +1,9 @@
+.el-message {
+  min-width: 300px;
+  border-radius: 12px;
+  box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.1);
+}
+
 @media (display-mode: standalone) {
   .el-message {
     margin-top: calc(env(safe-area-inset-top) + 12px);
