--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -18,6 +18,7 @@
 @import './common/shareoverlay.less';
 @import './common/bottomnotify.less';
 @import './common/maintain.less';
+@import './common/login.less';
 
 /* Views */
 
